--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
     <string name="username">用户名</string>
     <string name="password">密码</string>
     <string name="logout">切换账号</string>
+    <string name="username_hint">请输入用户名</string>
+    <string name="login">登录</string>
+    <string name="register">注册</string>
+    <string name="password_hint">请输入密码</string>
 </resources>
