--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="login">登录</string>
     <string name="register">注册</string>
     <string name="password_hint">请输入密码</string>
+    <string name="hidden_password">******</string>
 </resources>
